--- a/Monitoring.csproj
+++ b/Monitoring.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Models\ClientCopmiler.cs" />
     <Compile Include="Models\DBaseModels\Computer.cs" />
     <Compile Include="Models\Networking.cs" />
+    <Compile Include="Settings.cs" />
     <Compile Include="Tabs\AllComutersTab.xaml.cs">
       <DependentUpon>AllComutersTab.xaml</DependentUpon>
     </Compile>
@@ -147,7 +148,9 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="img\177-1770904_png-file-gear-wheels-icon-png.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
